# gh-cutter

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/tui/: details.rs  github.rs  mod.rs
src/tui/screens/: github.rs
