[package]
name = "gh-cutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
open = "5.1.3"
ratatui = "0.26.2"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = { version = "0.8.13" }
warp = { version = "0.3.7", default-features = false }
xdg = "2.5.2"
